Edits to poster 62

--- a/content/8-posters/62.md
+++ b/content/8-posters/62.md
@@ -72,7 +72,7 @@ The top surface of priming layers was characterized using ATR-FTIR ([table 62.1]
 
 Py-GCMS provided further details of synthetic polymer binder constituents, including verification of the use of seven different acrylic monomers. Within the group of styrenated-acrylics, styrene n-butyl acrylate (BA) predominated (37%), and within the group of “pure” acrylics, only ethyl acrylate–methyl methacrylate (EA-MMA) and BA-MMA were found, with a slightly higher occurrence of EA-MMA. One EA-MMA priming showed significant amounts of diethylene glycol dibenzoate plasticizer. Within the group of PVAc-acrylic binders, some were copolymerized with vinyl versatate (VeoVa). Surfactants such as polyethylene oxide (PEO) ({% cite 'Scalarone and Chiantore 2004' %}) were not observed with ATR-FTIR.
 
-Priming layer combinations varied ([fig. 62.2](#fig-62-2)). Double priming layers included acrylic over styrenated acrylic (see [fig. 62.2b](#fig-62-2)), acrylic over acrylic-PVAc (see [fig. 62.2c](#fig-62-2)), and oil over styrenated acrylic ([fig. 62.3](#fig-62-3)).
+Priming layer combinations varied ([fig. 62.2](#fig-62-2)). Double priming layers included acrylic over styrenated acrylic (see [fig. 62.2b](#fig-62-2)), acrylic over acrylic-PVAc (see [fig. 62.2c](#fig-62-2)), and oil over styrenated acrylic ([fig. 62.2d](#fig-62-2)).
 
 {% figure 'fig-62-2' %}
 
