Edits to poster 63

--- a/content/8-posters/63.md
+++ b/content/8-posters/63.md
@@ -36,7 +36,7 @@ abstract: "A large number of cultural properties were damaged in the March 2011 
 
 ## Background
 
-A large number of cultural properties were damaged in the March 2011 tsunami, an unprecedented natural disaster that devastated Japan’s Tohoku region ([fig. 63.1](#fig-63-1)). The process of conserving these properties has lasted nine years and remains ongoing to this day. At that time, I was working at the Conservation and Preservation Department of Tokyo National Museum, and I was put in charge of looking into how to desalinate canvas paintings as part of the second stage of the rescue process. Specifically, I (Tsuchiya) was entrusted with the task of restoring fifty-three canvas paintings from Rikuzentakata City Museum. These paintings were wrapped in plastic coverings at the time of the disaster ([fig. 63.2](#fig-63-2)). After the tsunami, they absorbed large volumes of grime and moisture and were kept in this moist state. As a result, mold grew across the surfaces, and there was a considerable amount of paint flaking.
+A large number of cultural properties were damaged in the March 2011 tsunami, an unprecedented natural disaster that devastated Japan’s Tohoku region ([fig. 63.1](#fig-63-1)). The process of conserving these properties has lasted nine years and remains ongoing to this day. At that time, I was working at the Conservation and Preservation Department of Tokyo National Museum, and I (Tsuchiya) was put in charge of looking into how to desalinate canvas paintings as part of the second stage of the rescue process. Specifically, I was entrusted with the task of restoring fifty-three canvas paintings from Rikuzentakata City Museum. These paintings were wrapped in plastic coverings at the time of the disaster ([fig. 63.2](#fig-63-2)). After the tsunami, they absorbed large volumes of grime and moisture and were kept in this moist state. As a result, mold grew across the surfaces, and there was a considerable amount of paint flaking.
 
 {% figure 'fig-63-1' %}
 
