Fix incorrect citations

--- a/content/8-posters/51.md
+++ b/content/8-posters/51.md
@@ -61,7 +61,7 @@ abstract: "Glue paste has been the most widely used lining adhesive in the South
 
 ## Introduction
 
-A variety of materials have been used in glue-paste linings throughout history, and this lining type is found on a significant number of the paintings in collections worldwide. Recipes varied from country to country and epoch to epoch. Cereal flours and animal glues were usually the main ingredients, either because they were readily available or simply owing to tradition. A variety of different additives (molasses, vinegar, Venetian turpentine, garlic, etc.) were commonly included in recipes, aiming to enhance performance or to prevent mold growth ({% cite 'Hackney et al. 2012' %}; {% cite 'Macarrón Miguel, Calvo Manuel, and Gil Macarrón 2016' %}).
+A variety of materials have been used in glue-paste linings throughout history, and this lining type is found on a significant number of the paintings in collections worldwide. Recipes varied from country to country and epoch to epoch. Cereal flours and animal glues were usually the main ingredients, either because they were readily available or simply owing to tradition. A variety of different additives (molasses, vinegar, Venetian turpentine, garlic, etc.) were commonly included in recipes, aiming to enhance performance or to prevent mold growth ({% cite 'Hackney et al. 2012' %}; {% cite 'Macarrón, Calvo, and Gil 2016' %}).
 
 Glue-paste linings can be long-lasting, but they can also lead to further degradation. It has remained unclear why some of these linings fail while others remain well preserved. In the last twenty-five years, there has been a significant interest in understanding the performance and aging of glue-paste linings. Some studies have analyzed the role of each component and given some insight into the bond performance of the adhesive mixture ({% cite 'Ackroyd 1995' %}, {% cite 'Ackroyd 1996' '' '1996' %}; {% cite 'Young and Ackroyd 2001' %}; {% cite 'Young, Hibberd, and Ackroyd 2002' %}). The research presented here shows how varying the dominant ingredients of the glue-paste recipe influences the mechanical performance (bond strength, stiffness, etc.) and degradation processes (biodeterioration) of lined canvas paintings. The impact of cyclic RH on the biological and physical stability of the laminate structure is also reported.
 
@@ -71,7 +71,7 @@ Glues and flours are the two main components of glue-paste adhesives. Their comp
 
 The study of protein glues in the conservation field has attracted some attention in recent years. Obtained from the skin and bones of animals through different preparations and purification treatments, their chemical, physical, and mechanical properties are largely influenced by the chemical structure of the protein and its denaturation process. Protein glues generally have high cohesive strength and stiffness in comparison to synthetic adhesives, as previous research has shown ({% cite 'Mecklenburg 1982' %}; {% cite 'Andersen and Fuster López 2019' %}).
 
-The molecular weight (size and length of the chains of the protein), the content of the helix structures formed during renaturation, and the type of intra- and intermolecular bonds in the protein as a function of the proline and hydroxyproline content determine the cohesive strength and the viscosity of the glue solution ({% cite 'Schellmann 2007' %}). The stiffness of gelatin leads to the classification into different Bloom grades, which are also an indication of mechanical properties ({% cite 'Melià Angulo, Fuster-López, and Escuder 2017' %}). Hide glues are also responsive to humidity fluctuations, developing high internal stresses if restrained and subjected to desiccation and losing all strength and undergoing biodeterioration above 70% RH ({% cite 'Mecklenburg 1982' %}). Together, these characteristics mean that animal glues play a major role in the behavior and long-term performance of glue-paste adhesives.
+The molecular weight (size and length of the chains of the protein), the content of the helix structures formed during renaturation, and the type of intra- and intermolecular bonds in the protein as a function of the proline and hydroxyproline content determine the cohesive strength and the viscosity of the glue solution ({% cite 'Schellmann 2007' %}). The stiffness of gelatin leads to the classification into different Bloom grades, which are also an indication of mechanical properties ({% cite 'Melià Angulo, Fuster-López, and Vicente Escuder 2017' %}). Hide glues are also responsive to humidity fluctuations, developing high internal stresses if restrained and subjected to desiccation and losing all strength and undergoing biodeterioration above 70% RH ({% cite 'Mecklenburg 1982' %}). Together, these characteristics mean that animal glues play a major role in the behavior and long-term performance of glue-paste adhesives.
 
 The second main component in glue pastes is flours, in which starch, proteins, and lipids are the most relevant components. Starch has functional properties such as solubility, water-holding capacity, swelling power, viscosity, and consistency, all of which largely depend on the amylose-amylopectin ratio as well as on the size of their granules as a function of the botanical origin and nature of the starch. The protein content also plays a major physicochemical role in the rheological behavior of the adhesive mixture ({% cite 'García Castillo 2016' %}).
 
