--- a/content/3-open-questions/18.md
+++ b/content/3-open-questions/18.md
@@ -67,7 +67,7 @@ It was not easy to find all the recipes used. In some cases, old documentary inf
 
 ### The Origin of the Use of *Gacha*, or Glue Paste
 
-Knowing the materials used to prepare a canvas is essential to understanding the behavior of the lining treatment. With reference to the recipe, materials, and ingredients used in canvases in Spain, interesting research has been done (e.g., {% cite 'Gayo and Jover de Celis 2010' %}), but we still have a lot to learn. For example, the presence of ashes in the preparatory layers has only recently been confirmed in paintings ( {% cite 'Jover de Celis and Gayo 2014' %}; {% cite 'Carò, Centeno, and Mahon 2018' %}), although it appeared in recipes and treatises.
+Knowing the materials used to prepare a canvas is essential to understanding the behavior of the lining treatment. With reference to the recipe, materials, and ingredients used in canvases in Spain, interesting research has been done (e.g., {% cite 'Gayo and Jover de Celis 2010' %}), but we still have a lot to learn. For example, the presence of ashes in the preparatory layers has only recently been confirmed in paintings ( {% cite 'Jover de Celis and Gayo García 2014' %}; {% cite 'Carò, Centeno, and Mahon 2018' %}), although it appeared in recipes and treatises.
 
 Through the documents, we know that from the moment people started painting on canvas, a flour paste was used to prepare the canvas. Giorgio Vasari has written about flour with walnut oil, glue, and white lead for preparing the canvas ({% cite 'Vasari [1568] 1998' '119' %}). An anonymous Spanish manuscript from the end of the sixteenth century also mentions preparing the canvas with glue, flour, and gypsum and states that “if it were all flour, it would be better” ({% cite 'Bruquetas Galán 1998' %}).
 
@@ -97,9 +97,9 @@ Examples of case studies include:
 
 -   *The Spinners* and *Philip III on Horseback* by Velázquez, in the Museo del Prado.
 
-{% figuregroup '2' 'fig-18-5-a, fig-18-5-b' '**Figure 18.5** (a) Recipe for *gacha* used in 1955 by Tomás Pérez Alférez, liner at the Museo del Prado, on the painting shown in fig. 18.4. (b) Cross section of glue-paste lining, corresponding to the left sleeve. Layers from the bottom: (1) glue-paste, (2) ground, (3) black paint. Images: (a) Archivo del Museo Nacional del Prado; (b) Real Academia de Bellas Artes de San Fernando de Madrid (E. Parra, Larco Química y Arte; conservation report: Silvia Viana, Ángeles Solís, and Judit Gasca)' %}
-
 {% figure 'fig-18-4' %}
+
+{% figuregroup '2' 'fig-18-5-a, fig-18-5-b' '**Figure 18.5** (a) Recipe for *gacha* used in 1955 by Tomás Pérez Alférez, liner at the Museo del Prado, on the painting shown in fig. 18.4. (b) Cross section of glue-paste lining, corresponding to the left sleeve. Layers from the bottom: (1) glue-paste, (2) ground, (3) black paint. Images: (a) Archivo del Museo Nacional del Prado; (b) Real Academia de Bellas Artes de San Fernando de Madrid (E. Parra, Larco Química y Arte; conservation report: Silvia Viana, Ángeles Solís, and Judit Gasca)' %}
 
 The two latter paintings have additional canvas strips to widen them. We know that *The Spinners* was lined in 1785 by Jacinto Gómez, and perhaps he carried out the widening of the painting, although its measurements vary from one inventory to another at different periods, probably due to adaptations for specific locations. During the last intervention on the painting, many repaints were detected, covering damage that may have arisen from shrinkage when using a new close-weft canvas or may have been caused by burns during ironing ({% cite 'Macarrón, Calvo, and Gil 2017' %}).
 
